# oxiplay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/oxiplay/: Cargo.toml  build.rs
crates/oxiplay/benches/: hot_paths.rs
crates/oxiplay/lang/en/LC_MESSAGES/: oxiplay.po
crates/oxiplay/src/: inhibit.rs  lib.rs  main.rs  media_controls.rs  opensubtitles.rs  update.rs  ytdlp.rs
crates/oxiplay/src/app/: mod.rs
crates/oxiplay/src/audio/: mod.rs
crates/oxiplay/src/decoder/: audio.rs  audio_filter.rs  demux.rs  hwaccel.rs  mod.rs  video.rs  video_filter.rs
crates/oxiplay/src/player/: clock.rs  mod.rs  state.rs
crates/oxiplay/src/playlist/: mod.rs
crates/oxiplay/src/recording/: mod.rs
crates/oxiplay/src/render/: mod.rs  yuv_hdr.wgsl
crates/oxiplay/src/settings/: mod.rs
crates/oxiplay/src/streaming/: mod.rs
crates/oxiplay/src/subtitles/: bitmap.rs  mod.rs
crates/oxiplay/src/ui/: mod.rs
crates/oxiplay/src/utils/: mod.rs
crates/oxiplay/src/video/: mod.rs
crates/oxiplay/tests/: playback.rs  shader_validation.rs
crates/oxiplay/ui/: main.slint
docs/: ARCHITECTURE.md  BUILD.md  PACKAGING.md  RENDER_WGPU.md
packaging/: oxiplay.desktop
packaging/windows/: oxiplay.wxs
