[workspace]
resolver = "2"
members = ["crates/oxiplay"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["micferna <ocb.ketu@gmail.com>"]
repository = "https://github.com/micferna/oxiplay"
rust-version = "1.80"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

# FFmpeg decode loops are far too slow at opt-level 0/1.
[profile.dev.package."*"]
opt-level = 3
