[package]
name = "oxiplay"
description = "Lecteur multimédia multiplateforme écrit en Rust (FFmpeg + Slint + cpal)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
# Rendu vidéo GPU « zéro copie » + tone-mapping HDR (expérimental ; câblage
# runtime en cours, voir docs/RENDER_WGPU.md). DÉSACTIVÉ par défaut : le chemin
# CPU (swscale RGBA, déjà colorimétriquement correct) reste le défaut et le repli.
gpu = ["slint/unstable-wgpu-28", "slint/renderer-femtovg-wgpu"]

[dependencies]
# Décodage : bindings sûrs au-dessus de FFmpeg (demux, decode, scale,
# resample). Fork « the-third » de ffmpeg-next, activement maintenu et
# compatible FFmpeg 5 à 8 (détection de version à la compilation) : le même
# build couvre la 7.x des distributions et la 8.x récente.
ffmpeg-the-third = "5"
# Interface graphique déclarative, rendu GPU (femtovg/Skia), multiplateforme
slint = "1.8"
# Sortie audio bas niveau multiplateforme (ALSA / WASAPI / CoreAudio)
cpal = "0.18"
# Canaux MPMC performants pour le pipeline de décodage
crossbeam-channel = "0.5"
# Boîtes de dialogue natives (ouverture de fichiers)
rfd = "0.17"
# Encodage PNG pour les captures d'écran
png = "0.18"
# Persistance des paramètres / playlists / historique
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
# Erreurs & journalisation
anyhow = "1"
log = "0.4"
env_logger = "0.11"
# Contrôles média du bureau (MPRIS/SMTC/Now Playing), backend zbus pur Rust
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
# Client HTTP minimal (TLS rustls) pour la vérification de mise à jour
ureq = "2"

[build-dependencies]
slint-build = "1.8"

[dev-dependencies]
# Benchmarks des chemins chauds (parsing/recherche de sous-titres,
# compositing image). Voir benches/hot_paths.rs.
criterion = "0.5"
# Validation statique du shader WGSL de rendu GPU (tests/shader_validation.rs).
naga = { version = "28", features = ["wgsl-in"] }

[[bench]]
name = "hot_paths"
harness = false

[package.metadata.deb]
maintainer = "micferna <ocb.ketu@gmail.com>"
copyright = "2026, micferna"
extended-description = "Lecteur multimédia complet : vidéo, audio, sous-titres, playlists et streaming réseau (HTTP/HLS/RTSP)."
depends = "libavcodec61, libavformat61, libavutil59, libswscale8, libswresample5, libasound2t64"
section = "video"
priority = "optional"
assets = [
    ["target/release/oxiplay", "usr/bin/", "755"],
    ["../../packaging/oxiplay.desktop", "usr/share/applications/", "644"],
]
